--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,13 @@
 ---
 ---
 @import "{{ site.theme }}";
+
+.enclarge-onhover {
+    width: 600;
+    height: 400;
+}
+
+.enclarge-onhover:hover {
+    width: 700;
+    height: 400;
+}
