--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,13 +2,13 @@
 ---
 @import "{{ site.theme }}";
 
-.enclarge-onhover {
+.enlarge-onhover {
     width: 600px;
     height: 400px;
     transition: transform 0.3s ease, border-radius 0.3s ease;
 }
 
-.enclarge-onhover:hover {
+.enlarge-onhover:hover {
     border-radius: 10px;
     transform: scale(1.5);
 }
