--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,3 +12,8 @@
     border-radius: 10px;
     transform: scale(1.5);
 }
+
+.image-wrapper {
+    display: inline-block;
+    overflow: visible;
+}
