--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,11 +13,31 @@
     transform: scale(1.05);
 }
 
-.image-wrapper {
-    display: inline-block;
-    overflow: visible;
-}
-
 img {
   border: 5px solid #555555;
+}
+
+.container {
+    position: relative;
+    width: 50%;
+    max-width: 300px;
+}
+
+.overlay {
+    position: absolute;
+    bottom: 0;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    transition: .5s ease;
+    opacity: 0;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+}
+
+.container:hover .overlay {
+    opacity: 1;
 }
