--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,17 +23,15 @@ img {
 
 .overlay {
     position: absolute;
-    bottom: 0;
-    background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.5);
-    color: #f1f1f1;
-    width: 70%;
-    transition: .5s ease;
-    opacity: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: white;
-    font-size: 20px;
-    padding: 20px;
-    text-align: center;
+    font-size: 24px;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 10px 20px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
 }
 
 .container:hover .overlay {
