--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,15 +24,18 @@ img {
 
 .overlay {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    bottom: 0;
+    left: 0;
+    width: 100%;
     color: white;
     font-size: 24px;
     background: rgba(0, 0, 0, 0.6);
-    padding: 10px 20px;
+    padding: 12px;
+    box-sizing: border-box;
     opacity: 0;
+    pointer-events: none;
     transition: opacity 0.3s ease;
+    text-align: center;
 }
 
 .container:hover .overlay {
