--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 @import "{{ site.theme }}";
 
 .enlarge-onhover {
-    width: 600px;
+    width: 800x;
     height: 400px;
     transition: transform 0.3s ease, border-radius 0.3s ease;
 }
