--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,13 +19,16 @@ img {
 
 .container {
     position: relative;
-    display: inline-block;
+    display: block;
     width: 800px;
     margin: 0 auto; 
 }
 
 .container img {
     display: block; 
+    width: 100%;  
+    height: 300px;
+    transition: transform 0.3s ease;
 }
 
 .overlay {
