--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,6 +29,7 @@ img {
 .container img:hover {
     transform: scale(1.05);
     border-radius: 10px;
+    outline: 5px solid #555555;
 }
 
 .overlay {
