--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,7 @@ img {
   width: 100%;
   height: 300px;
   transition: transform 0.3s ease, border-radius 0.3s ease;
+  box-sizing: border-box;
 }
 
 .container {
@@ -15,7 +16,8 @@ img {
     width: 800px;
     margin: 20px auto; 
     display: block;
-    overflow: hidden;
+    overflow: visible;
+    padding: 5px;
 }
 
 .container img {
@@ -29,7 +31,6 @@ img {
 .container img:hover {
     transform: scale(1.05);
     border-radius: 10px;
-    outline: 5px solid #555555;
 }
 
 .overlay {
