--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,10 +3,12 @@
 @import "{{ site.theme }}";
 
 .post-meta,
-.post-meta .post-date,
-.post-meta .post-author,
-.post-meta .post-tags {
+.post-meta * {
     display: none !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    height: 0 !important;
+    overflow: hidden !important;
 }
 
 img {
