--- a/_layout/post.html
+++ b/_layout/post.html
@@ -1,8 +1,12 @@
 ---
 layout: default
 ---
-<article class="post-content">
-  <h1>{{ page.title }}</h1>
 
-  {{ content }}
+<article class="post-content">
+  <header>
+    <h1>{{ page.title }}</h1>
+  </header>
+  <div class="content">
+    {{ content }}
+  </div>
 </article>
