--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,7 +22,7 @@ img {
 
 .container {
     position: relative;
-    width: 800px;
+    width: 100%;
     margin: 20px auto; 
     display: block;
     overflow: visible;
