--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,15 +22,15 @@ img {
 
 .container {
     position: relative;
-    width: 100%;
-    margin: 20px auto; 
-    display: block;
+    width: 100%; 
+    max-width: 800px;  
+    margin: 20px auto;  
     overflow: visible;
     padding: 5px;
 }
 
 .container img {
-    display: block; 
+    display: block;
     width: 100%;  
     height: 300px;
     border: 5px solid #555555;
