--- a/_layout/post.html
+++ b/_layout/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post-content">
+<article class="post">
   <header>
     <h1>{{ page.title }}</h1>
   </header>
