--- a/_layout/default.html
+++ b/_layout/default.html
@@ -12,7 +12,7 @@
   <!-- Home Button -->
   <div style="text-align:center; margin-top:20px;">
     <a href="{{ site.baseurl | relative_url }}" 
-       style="padding:10px 20px; background:#00ff00; color:#e41251; text-decoration:none; border-radius:5px; font-weight:bold;">
+       style="padding:10px 20px; background:#381892; color:#e41251; text-decoration:none; border-radius:5px; font-weight:bold;">
        Home
     </a>
   </div>
