--- a/_layout/default.html
+++ b/_layout/default.html
@@ -9,15 +9,14 @@
 
 <body>
 
-  <!-- Home Button -->
   <div style="text-align:center; margin-top:20px;">
+    <span style="font-size: 18px; color:#381892; font-weight: bold;">Home</span>
     <a href="{{ site.baseurl | relative_url }}" 
-       style="padding:10px 20px; background:#381892; color:#e41251; text-decoration:none; border-radius:5px; font-weight:bold;">
-       Home
+     style="padding:10px 20px; background:#381892; color:#e41251; text-decoration:none; border-radius:5px; font-weight:bold;">
+     Home
     </a>
   </div>
 
-  <!-- Page Content -->
   <main>
     {{ content }}
   </main>
