--- a/_layout/default.html
+++ b/_layout/default.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 </head>
 
 <body>
 
   <div style="text-align:center; margin-top:20px;">
-    <span style="font-size: 18px; color:#381892; font-weight: bold;">Home</span>
+    <span style="font-size: 18px; color:#ffffff; font-weight: bold;">Home</span>
     <a href="{{ site.baseurl | relative_url }}" 
      style="padding:10px 20px; background:#381892; color:#e41251; text-decoration:none; border-radius:5px; font-weight:bold;">
      Home
