--- a/_layout/default.html
+++ b/_layout/default.html
@@ -18,6 +18,12 @@
     </a>
   </div>
 
+  <div style="text-align:center; margin-top:20px;">
+    <a href="{{ site.baseurl | relative_url }}" class="button">
+     Home
+    </a>
+  </div>
+
   <main>
     {{ content }}
   </main>
