--- a/_layout/default.html
+++ b/_layout/default.html
@@ -19,6 +19,7 @@
   </div>
 
   <div style="text-align:center; margin-top:20px;">
+    <span style="font-size: 18px; color:#ffffff; font-weight: bold;">Home</span>
     <a href="{{ site.baseurl | relative_url }}" class="button">
      Home
     </a>
