--- a/_layout/default.html
+++ b/_layout/default.html
@@ -25,6 +25,13 @@
     </a>
   </div>
 
+    <div style="text-align:center; margin-top:20px;">
+    <span style="font-size: 18px; color:#ffffff; font-weight: bold;">Home</span>
+    <a href="{{ site.baseurl | relative_url }}" class="btn">
+     Home
+    </a>
+  </div>
+
   <main>
     {{ content }}
   </main>
