--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,13 +2,8 @@
 ---
 @import "{{ site.theme }}";
 
-.post-meta,
-.post-meta * {
+.post-meta, .post-date, .author, .tags {
     display: none !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    height: 0 !important;
-    overflow: hidden !important;
 }
 
 img {
