--- a/_layout/default.html
+++ b/_layout/default.html
@@ -32,6 +32,8 @@
     </a>
   </div>
 
+  <a href="https://github.com/pages-themes/hacker/tarball/master" class="btn">Download as .tar.gz</a>
+
   <main>
     {{ content }}
   </main>
