--- a/_layout/default.html
+++ b/_layout/default.html
@@ -34,6 +34,8 @@
 
   <a href="https://github.com/pages-themes/hacker/tarball/master" class="btn">Download as .tar.gz</a>
 
+  <a href="{{ site.baseurl | relative_url }}" class="btn">Home</a>
+
   <main>
     {{ content }}
   </main>
