--- a/_layout/default.html
+++ b/_layout/default.html
@@ -35,6 +35,10 @@
 
   <a href="{{ site.baseurl | relative_url }}" class="btn">Home</a>
 
+  <div style="text-align:center; margin-top:20px;">
+    <a href="{{ site.baseurl | relative_url }}" class="btn">Home</a>
+  </div>
+
   <main>
     {{ content }}
   </main>
