--- a/_layout/default.html
+++ b/_layout/default.html
@@ -39,6 +39,15 @@
     <a href="{{ site.baseurl | relative_url }}" class="btn">Home</a>
   </div>
 
+  <div style="text-align:center; margin-top:20px;">
+  <a href="https://github.com/Arnas-Droid/Portfolio" class="btn"><span class="icon"></span>Home</a>
+    <a href="https://github.com/Arnas-Droid/Portfolio" class="button"><span class="icon"></span>Home</a>
+  </div>
+
+  <a href="https://github.com/Arnas-Droid/Portfolio" class="btn"><span class="icon"></span>Home</a>
+
+  <a href="https://github.com/Arnas-Droid/Portfolio" class="button"><span class="icon"></span>Home</a>
+
   <main>
     {{ content }}
   </main>
