--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,11 @@
 ---
 @import "{{ site.theme }}";
 
+
+.view {
+  display: none;
+}
+
 .post-meta, .post-date, .author, .tags {
     display: none !important;
 }
