--- a/_layout/default.html
+++ b/_layout/default.html
@@ -6,48 +6,15 @@
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
-
 <body>
 
-  <div style="text-align:center; margin-top:20px;">
-    <span style="font-size: 18px; color:#ffffff; font-weight: bold;">Home</span>
-    <a href="{{ site.baseurl | relative_url }}" 
-     style="padding:10px 20px; background:#381892; color:#e41251; text-decoration:none; border-radius:5px; font-weight:bold;">
-     Home
-    </a>
-  </div>
+  <!-- Header -->
+  <header>
+    <h1>{{ page.title }}</h1>
+    <!-- No metadata (date, tags, author) will be displayed here -->
+  </header>
 
-  <div style="text-align:center; margin-top:20px;">
-    <span style="font-size: 18px; color:#ffffff; font-weight: bold;">Home</span>
-    <a href="{{ site.baseurl | relative_url }}" class="button">
-     Home
-    </a>
-  </div>
-
-    <div style="text-align:center; margin-top:20px;">
-    <span style="font-size: 18px; color:#ffffff; font-weight: bold;">Home</span>
-    <a href="{{ site.baseurl | relative_url }}" class="btn">
-     Home
-    </a>
-  </div>
-
-  <a href="https://github.com/pages-themes/hacker/tarball/master" class="btn">Download as .tar.gz</a>
-
-  <a href="{{ site.baseurl | relative_url }}" class="btn">Home</a>
-
-  <div style="text-align:center; margin-top:20px;">
-    <a href="{{ site.baseurl | relative_url }}" class="btn">Home</a>
-  </div>
-
-  <div style="text-align:center; margin-top:20px;">
-  <a href="https://github.com/Arnas-Droid/Portfolio" class="btn"><span class="icon"></span>Home</a>
-    <a href="https://github.com/Arnas-Droid/Portfolio" class="button"><span class="icon"></span>Home</a>
-  </div>
-
-  <a href="https://github.com/Arnas-Droid/Portfolio" class="btn"><span class="icon"></span>Home</a>
-
-  <a href="https://github.com/Arnas-Droid/Portfolio" class="button"><span class="icon"></span>Home</a>
-
+  <!-- Main Content -->
   <main>
     {{ content }}
   </main>
