--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,10 @@
 ---
 @import "{{ site.theme }}";
 
+small {
+  display: none;
+}
+
 .post-meta, .post-date, .author, .tags {
     display: none !important;
 }
