--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,6 +30,42 @@ img {
   border-radius: 10px; 
 }
 
+.containerSlide {
+  position: relative;
+}
+
+.caption-containerSlide {
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
+}
+
+.mySlides {
+  display: none;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
 .overlay {
   position: absolute;
   bottom: 0;
