--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -66,6 +66,11 @@ img {
   border-radius: 3px 0 0 3px;
 }
 
+.column {
+  float: left;
+  width: 16.66%;
+}
+
 .overlay {
   position: absolute;
   bottom: 0;
