--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -100,6 +100,12 @@ img {
   text-align: center;
 }
 
+.content {
+  margin-top: 40px;
+  padding: 0 20px;
+  text-align: justify;
+}
+
 .slide-img {
   width: 560px;    
   height: auto;       
